Closed
Bug 404677
Opened 17 years ago
Closed 17 years ago
"ASSERTION: Intrinsic ratio has a negative component!" with negative-height <svg> element
Categories
(Core :: SVG, defect)
Core
SVG
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: jwatt)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
157 bytes,
application/xhtml+xml
|
Details | |
2.15 KB,
patch
|
tor
:
review+
tor
:
superreview+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
Loading the testcase triggers:
###!!! ASSERTION: Intrinsic ratio has a negative component!: 'aIntrinsicRatio.width >= 0 && aIntrinsicRatio.height >= 0', file /Users/jruderman/trunk/mozilla/layout/base/nsLayoutUtils.cpp, line 1850
jwatt added this assertion (along with the surrounding code) two days ago, in bug 294086.
Reporter | ||
Comment 1•17 years ago
|
||
Oops, forgot to CC jwatt.
![]() |
Assignee | |
Updated•17 years ago
|
Assignee: nobody → jwatt
![]() |
Assignee | |
Updated•17 years ago
|
Status: NEW → ASSIGNED
![]() |
Assignee | |
Comment 2•17 years ago
|
||
Thanks Jesse.
Attachment #297852 -
Flags: superreview?(tor)
Attachment #297852 -
Flags: review?(tor)
Attachment #297852 -
Flags: superreview?(tor)
Attachment #297852 -
Flags: superreview+
Attachment #297852 -
Flags: review?(tor)
Attachment #297852 -
Flags: review+
![]() |
Assignee | |
Updated•17 years ago
|
Attachment #297852 -
Flags: approval1.9?
Comment 3•17 years ago
|
||
Comment on attachment 297852 [details] [diff] [review]
patch
a=beltzner for 1.9
Attachment #297852 -
Flags: approval1.9? → approval1.9+
![]() |
Assignee | |
Comment 4•17 years ago
|
||
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
![]() |
Assignee | |
Updated•17 years ago
|
OS: Mac OS X → All
Hardware: PC → All
Updated•17 years ago
|
Flags: in-testsuite?
You need to log in
before you can comment on or make changes to this bug.
Description
•