Fixing bug 404677. ASSERTION: Intrinsic ratio has a negative component. r+sr=tor@acm.org, a1.9=beltzner@mozilla.com